--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 quarkus.langchain4j.mcp.filesystem.transport-type=stdio
-quarkus.langchain4j.mcp.filesystem.command=npm,exec,@modelcontextprotocol/server-filesystem@0.6.2,${PWD}
-quarkus.langchain4j.log-requests=true
-quarkus.langchain4j.log-responses=true
+quarkus.langchain4j.mcp.filesystem.command=npm,exec,@modelcontextprotocol/server-filesystem@0.6.2,./
+#quarkus.langchain4j.log-requests=true
+#quarkus.langchain4j.log-responses=true
+
+#quarkus.console.disable-input=true
